fix text size on mobile

--- a/next/src/layouts/scelto.less
+++ b/next/src/layouts/scelto.less
@@ -65,7 +65,7 @@ p {
     }
 
     h3 {
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
     h4 {
         font-size: 1.3em;
